<resources>
    <string name="app_name">Code2Create</string>

    <string name="Rs35000">\u20B935000</string>
    <string name="Rs15000">\u20B915000</string>
    <string name="Rs8000">\u20B98000</string>
    <string name="Rs3000">\u20B93000</string>
    <string name="Rs2000">\u20B92000</string>

    <string name="winner">Winner</string>
    <string name="best_ui_ux">Best UI/UX</string>
    <string name="second_place">Second Place</string>
    <string name="here_s_some_motivation">Here\'s some motivation…</string>
    <string name="prizes">Prizes</string>
    <string name="most_innovative">Innovative Idea</string>
    <string name="third_place">Third Place</string>
    <string name="best_first_year">Best First Year</string>

    <string name="sponsors">Sponsors</string>
    <string name="without_them_all_of_this_wouldn_t_be_possible">Without them, all of this wouldn’t be possible</string>

    <string name="about">About</string>
    <string name="knowledge_is_power_know_more">Knowledge is power, know more.</string>

    <string name="agenda">Agenda</string>
    <string name="view_the_timeline_of_the_event">View the timeline of the event.</string>

    <string name="alerts">Alerts</string>
    <string name="missed_a_previous_one">Missed a previous one?</string>

    <string name="faq_s">FAQ\'s</string>
    <string name="clear_all_your_doubts_here">Clear all your doubts here</string>

    <string name="something_wrong"><u>Something Wrong?</u></string>
    <string name="redeem">REDEEM</string>
    <string name="redeemed">REDEEMED</string>

    <string name="shared_prefs_name">UserInfo</string>
    <string name="shared_prefs_email">email</string>
    <string name="shared_prefs_transformed_email">transformedEmail</string>
    <string name="shared_prefs_wifi_coupon">wifiCoupon</string>

    <string name="acm_vit">ACM VIT</string>
    <string name="about_acm_vit">Right from its inception in 2009, the ACM VIT Student Chapter has been organizing and conducting successful technical and professional development events. ACM-VIT is a non-profit organization of talented individuals specialising in several domains of technology like WebDev, AppDev, Machine Learning, AR/VR, CyberSec and many more. Technology is its cause and education its objective, which we achieve by conducting exciting and informative events all year round with Code2Create being our grandest event.</string>
    <string name="code2create">Code2Create</string>
    <string name="about_code2create">Code2Create is ACM-VIT’s flagship event and one of the grandest annual events hosted in VIT. A thrilling tech sprint awaited by numerous innovators, Code2Create witnesses a plethora of skill sets. Code2Create is a place where graphic designers, software developers, app and web developers collaborate intensively on projects. Participants from across the country indulge in 36 hours of intense brainstorming, designing, creating and testing, along with some engaging and very enjoyable side quests.</string>

    <!--FAQs start from here-->
    <string name="faq_q1">How do I submit my work?</string>
    <string name="faq_a1">You can submit your projects on our portal: c2c.acmvit.in/projects</string>

    <string name="faq_q2">Who will own the Intellectual Property Rights of the product developed by my team?</string>
    <string name="faq_a2">The Intellectual Property Rights belong solely to your team until your team decides to enter into an agreement with a third party company in which case the Intellectual Property Rights will be divided equally between the company(Party 1) and your team(Party 2).</string>

    <string name="faq_q3">How many reviews will be there?</string>
    <string name="faq_a3">There will be two reviews. After the second review we will have eliminations based on the results of the first two reviews.</string>

    <string name="faq_q4">What is the weightage of each review?</string>
    <string name="faq_a4">For the 1st review we will make note of your chosen track with understanding and innovation you have shown related to the chosen problem statement.
The 2nd review is a technical review where you will be judged based on your implementation.</string>

    <string name="faq_q5">Will I get food?</string>
    <string name="faq_a5">Yes you will get loads of yummy food to fill your bellies with!</string>

    <string name="faq_q6">What do I do if I want to rest?</string>
    <string name="faq_a6">We have a lounge in the CS Hall for the participants to relax. Just ask any of the volunteers around and they will guide you to the place. You are welcome to rest on the mattresses and beanbags provided in the lounge, or even participate in one of the many fun activities to refresh your mind.</string>

    <string name="faq_q7">Who is on the Judging Panel?</string>
    <string name="faq_a7">There will be 6 judges forming 3 panels of 2 judges each.</string>

    <string name="faq_q8">Can we work on our own problem statements?</string>
    <string name="faq_a8">Of course! As long as your problem statement is relevant to one of the tracks provided, you are free to work on any problem statement to your liking.</string>

    <string name="faq_q9">What do I do if I need an internet connection?</string>
    <string name="faq_a9">You will be provided with free access to our beloved internet facility, VOLSBB. If you have any issues with the internet contact any of our organisers for assistance.</string>

    <string name="faq_q10">What will we be judging criterion?</string>
    <string name="faq_a10">The criterion for evaluations are: Simplicity, Design, Solution to real time problem, Technology and Feasibility as a product.</string>

    <string name="faq_q11">Who do I contact if I face any problems?</string>
    <string name="faq_a11">We have our organising team to assist you with any problems that you might face during the hackathon. You can call on any one of us, we will do our best to assist you.</string>
    <string name="login_success">Sign In Success</string>
    <string name="click_here">Click Here</string>
    <string name="not_a_google_account">Not Registered ?</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered ?</string>

</resources>
